[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Level 1/Stage6.gd" type="Script" id=1]
[ext_resource path="res://Lava.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level 1/PathFollow2D.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Enemy2/Enemy2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Enemy1/Enemy1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Enemy3/Enemy3.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 448, 640, 0, 0, 0, 0, 448, 384 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1472, 384, 0, 0, 0, 0, 1472, 640 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 960, 64, 0, 0, 0, 0, 576, 512, 0, 0, 0, 0, 960, 960, 0, 0, 0, 0, 1344, 512, 0, 0, 0, 0, 960, 64 )
}

[node name="Stage6" type="Node"]

script = ExtResource( 1 )

[node name="Lavas" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Lava" parent="Lavas" index="0" instance=ExtResource( 2 )]

[node name="Lava12" parent="Lavas" index="1" instance=ExtResource( 2 )]

position = Vector2( 1600, 256 )

[node name="Lava4" parent="Lavas" index="2" instance=ExtResource( 2 )]

position = Vector2( 0, 512 )

[node name="Lava8" parent="Lavas" index="3" instance=ExtResource( 2 )]

position = Vector2( 1280, 768 )

[node name="Lava6" parent="Lavas" index="4" instance=ExtResource( 2 )]

position = Vector2( 320, 0 )

[node name="Lava9" parent="Lavas" index="5" instance=ExtResource( 2 )]

position = Vector2( 1600, 0 )

[node name="Lava5" parent="Lavas" index="6" instance=ExtResource( 2 )]

position = Vector2( 320, 768 )

[node name="Lava7" parent="Lavas" index="7" instance=ExtResource( 2 )]

position = Vector2( 1600, 512 )

[node name="Lava2" parent="Lavas" index="8" instance=ExtResource( 2 )]

position = Vector2( 0, 256 )

[node name="Lava11" parent="Lavas" index="9" instance=ExtResource( 2 )]

position = Vector2( 1280, 0 )

[node name="Lava3" parent="Lavas" index="10" instance=ExtResource( 2 )]

position = Vector2( 0, 768 )

[node name="Lava10" parent="Lavas" index="11" instance=ExtResource( 2 )]

position = Vector2( 1600, 768 )

[node name="Path2D" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( 448, 640 )
rotation = -1.57078
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 3 )

[node name="Enemy22" parent="Path2D/PathFollow2D" index="0" instance=ExtResource( 4 )]

rotation = 1.57078

[node name="Path2D2" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2" index="0"]

position = Vector2( 1472, 384 )
rotation = 1.5708
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 3 )

[node name="Enemy21" parent="Path2D2/PathFollow2D" index="0" instance=ExtResource( 4 )]

rotation = -1.5708

[node name="Path2D3" type="Path2D" parent="." index="3"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3" index="0"]

position = Vector2( 960, 64 )
rotation = 2.27941
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 3 )

[node name="Enemy1" parent="Path2D3/PathFollow2D" index="0" instance=ExtResource( 5 )]

position = Vector2( 8.24921, 0.806763 )
rotation = -2.27941

[node name="Enemy3" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 960, 1024 )

[connection signal="died" from="Path2D/PathFollow2D/Enemy22" to="." method="_on_Enemy22_died"]

[connection signal="died" from="Path2D2/PathFollow2D/Enemy21" to="." method="_on_Enemy21_died"]

[connection signal="died" from="Path2D3/PathFollow2D/Enemy1" to="." method="_on_Enemy1_died"]

[connection signal="died" from="Enemy3" to="." method="_on_Enemy3_died"]


[editable path="Enemy3"]
